# tsne-cuda-torch

./: .flake8  .gitignore  .pydocstyle  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: benchmark-gpu.yml  lint.yml
benchmarks/: run_benchmarks.py
docs/: implementation.md
docs/benchmarks/: README.md  benchmark_100k_cuda.json  benchmark_1m_shared.json  benchmark_cifar100_50k.json  benchmark_cifar10_50k.json  benchmark_memory_smoke.json  benchmark_mnist_60k.json  benchmark_scaling_sweep_1k_100k.json
src/tsne_torch/: __init__.py  affinity.py  benchmarking.py  diagnostics.py  estimator.py  exact_backend.py  fft_backend.py  memory.py  optimization.py
tests/: _helpers.py  conftest.py  test_affinity_objective.py  test_benchmarking.py  test_estimator.py  test_memory.py
